--- a/src/Pages/AddNotes.css
+++ b/src/Pages/AddNotes.css
@@ -1,6 +1,7 @@
 form {
     width: 500px;
-    height: auto;
+    height: 215;
+    overflow: hidden;
     padding: 20px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
