--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ body {
   padding: 1.57rem;
 }
 
+.note-content {
+  height: 64px;
+  overflow: hidden;
+}
+
 .note-has-grid .nav-link {
   padding: 0.5rem;
 }
@@ -141,14 +146,51 @@ body {
   display: none;
 }
 
-@media (max-width: 767.98px) {
-  .note-has-grid .single-note-item {
-    max-width: 100%;
-  }
-}
 
-@media (max-width: 991.98px) {
+@media (max-width: 768px) {
   .note-has-grid .single-note-item {
-    max-width: 216px;
+    max-width: 90%;
+
   }
+
+  .note-content {
+    height: 64px;
+    overflow: hidden;
+  }
+
+  .form-select {
+    max-width: 75%
+  }
+
+  .container {
+    margin-left: 10px;
+  }
+
+  .d-flex {
+    max-width: 95%;
+    justify-content: center;
+
+  }
+
+  .add {
+    margin-top: 10px;
+  }
+
+  .body {
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+  }
+
+  .navbar {
+    width: 100%;
+  }
+
+  #root {
+    width: 100%;
+  }
+
+
+
 }
